# iot-edge-sdk-for-iot-parser

./: .gitignore  LICENSE  NOTICE  README.md  common.c
bacnet/: Makefile  README.md  install-ubuntu-nossh.sh  install-ubuntu-withssh.sh
bacnet/bacnet-stack/demo/handler/: h_iam.c  s_cov.c
bacnet/bacnet-stack/demo/initrouter/: bacinitr
bacnet/bacnet-stack/demo/object/: trendlog.c
bacnet/bacnet-stack/demo/readfile/: bacarf
bacnet/bacnet-stack/demo/readpropm/: bacrpm
bacnet/bacnet-stack/demo/reinit/: bacrd
bacnet/bacnet-stack/demo/scov/: bacscov
bacnet/bacnet-stack/demo/ucov/: bacucov
bacnet/bacnet-stack/demo/uptransfer/: bacupt
bacnet/bacnet-stack/demo/whois/: bacwi
bacnet/bacnet-stack/demo/whoisrouter/: bacwir
bacnet/bacnet-stack/demo/writefile/: bacawf
bacnet/bacnet-stack/demo/writeprop/: bacwp
bacnet/bacnet-stack/include/: client.h  tsm.h
bacnet/bacnet-stack/src/: address.c  tsm.c
bacnet/bacnet2mqtt/: Makefile  bac2mqtt.cbp  baclib.c  baclib.h  bacutil.c  bacutil.h  bdBacnetGateway  business.c  common.c  common.h  data.c  data.h  jsonutil.c  jsonutil.h  linux_x86.sh  main.c  mqttutil.c  mqttutil.h  thread.h  win32.sh
bacnet/gateway/: Makefile  baclib.c  baclib.h  bacutil.c  bacutil.h  business.c  business.h  common.c  common.h  data.c  data.h  jsonutil.c  jsonutil.h  linux-arm.sh  linux_amd64.sh  linux_x86.sh  main.c  mqttutil.c  mqttutil.h  requestlist.h  thread.h  win32.sh
device-management/: CMakeLists.txt  README.MD
device-management/cmake/modules/: FindGMock.cmake  FindLibUUID.cmake  FindLog4c.cmake  FindPaho.cmake  FindPahoCpp.cmake  FindcJSON.cmake
device-management/lib/: CMakeLists.txt  device_management.c  device_management.h  device_management_conf.h  device_management_util.c  device_management_util.h
device-management/samples/: CMakeLists.txt  log4c.txt  log4crc  pump.c  tea_pot.c
device-management/samples/cpp/: smart_bubble.cpp
device-management/test/: CMakeLists.txt  DeviceManagementStub.cpp  DeviceManagementStub.h  SmartBirdcage.cpp  device_management_stub.cpp  device_management_stub.h  integration_test.cpp  smart_birdcage.cpp  smart_birdcage.h  test_conf.cpp  test_conf.h  test_util.cpp  test_util.h  update_test.cpp
modbus/: README.md
modbus/cross-compile/: Makefile  Makefile-arm  Makefile-win  linux-arm.sh  win32.sh  win64.sh
modbus/nossl/: Makefile  install-ubuntu.sh  paho_Makefile_c
modbus/src/: business.c  business.h  common.c  common.h  data.h  modbus-rtu-helper.c  modbus-rtu-helper.h  modbuslib.c  modbuslib.h  mqttsender.c  mqttsender.h  ringbufi.c  ringbufi.h
modbus/withssl/: Makefile  install-ubuntu.sh  paho_Makefile_cs
nossl/: Makefile  install-ubuntu.sh  install.txt
src/: business.c  common.c  common.h  data.h  main.c  modbuslib.c
withssl/: Makefile  install-ubuntu.sh  install.txt
